# popcorntime

./: .gitignore  ANDROID_TV_BUILD.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  README.md  biome.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
.github/: copilot-instructions.md  pr-labeler.yaml
.github/ISSUE_TEMPLATE/: 3_country.yaml  4_documentation.yaml
.github/workflows/: android-tv-build.yaml  publish.yaml  storybook.yaml  test-rust.yaml
apps/desktop/: package.json
apps/desktop/src/: app.tsx  layout.tsx  main.tsx  metrics.tsx  providers.tsx
apps/desktop/src/components/: command-center.tsx  header.tsx  provider.tsx
apps/desktop/src/components/browse/: index.tsx  sidebar.tsx
apps/desktop/src/components/modal/: media.tsx  preferences.tsx  settings.tsx  watch-preferences.tsx
apps/desktop/src/components/onboarding/: preferences.tsx  providers.tsx  timeline.tsx  tos.tsx
apps/desktop/src/components/onboarding/launch/: manifest.tsx  welcome.tsx
apps/desktop/src/components/onboarding/user/: favorites.tsx  providers.tsx
apps/desktop/src/hooks/: useCountry.test.tsx  useCountry.tsx  useProviders.test.tsx  useProviders.tsx  useSearch.tsx  useSession.test.tsx  useSession.tsx  useSettings.tsx  useTauri.ts  useUpdater.test.tsx  useUpdater.tsx
apps/desktop/src/loaders/: preferences.test.tsx  preferences.tsx  providers.test.tsx  providers.tsx  session.test.tsx  session.tsx  settings.test.tsx  settings.tsx
apps/desktop/src/routes/: browse.tsx  login.test.tsx  login.tsx  onboarding.tsx  require-session.tsx  splash.test.tsx  splash.tsx
apps/desktop/src/stores/: command-center.ts  global.test.ts  global.ts
apps/desktop/src/tauri/: types.ts
apps/desktop/src/test/: setup.ts
apps/desktop/src/utils/: medias.ts
crates/popcorntime-error/: Cargo.toml
crates/popcorntime-error/src/: lib.rs
crates/popcorntime-graphql-client/: Cargo.toml  build.rs
crates/popcorntime-graphql-client/gql/: schema.graphql
crates/popcorntime-graphql-client/src/: client.rs  lib.rs  media.rs  preferences.rs  providers.rs  reactions.rs  search.rs
crates/popcorntime-graphql-client/src/snapshots/: popcorntime_graphql_client__media__tests__media_query_gql_output.snap  popcorntime_graphql_client__preferences__tests__preferences_mutation_gql_output.snap  popcorntime_graphql_client__preferences__tests__preferences_query_gql_output.snap  popcorntime_graphql_client__providers__tests__add_favorite_multiple_mutation_gql_output.snap  popcorntime_graphql_client__providers__tests__add_favorite_mutation_gql_output.snap  popcorntime_graphql_client__providers__tests__preferences_query_gql_output.snap  popcorntime_graphql_client__providers__tests__remove_favorite_mutation_gql_output.snap  popcorntime_graphql_client__reactions__tests__delete_favorite_mutation_gql_output.snap  popcorntime_graphql_client__reactions__tests__reactions_query_gql_output.snap  popcorntime_graphql_client__search__tests__search_query_gql_output.snap
crates/popcorntime-session/: Cargo.toml
crates/popcorntime-session/src/: authorization.rs  keyring.rs  lib.rs  session.rs  storage.rs
crates/popcorntime-settings/: Cargo.toml
crates/popcorntime-settings/src/: lib.rs
crates/popcorntime-tauri/: Cargo.toml  tauri.conf.json  tauri.conf.nightly.json
crates/popcorntime-tauri/capabilities/: default.json
crates/popcorntime-tauri/dictionaries/: ar.json  da.json  de.json  el.json  en.json  es.json  et.json  fa.json  fi.json  fr.json  ga.json  he.json  hi.json  it.json  ja.json  nl.json  no.json  pl.json  pt.json  sr.json  sv.json  tr.json  ur.json
crates/popcorntime-tauri/icons/dev/: icon.icns
crates/popcorntime-tauri/icons/nightly/: icon.icns
crates/popcorntime-tauri/icons/release/: icon.icns
crates/popcorntime-tauri/src/: error.rs  event.rs  graphql.rs  lib.rs  main.rs  session.rs  settings.rs  window.rs
tools/aapt2-arm64/: aapt2
