[package]
name = "popcorntime-graphql-client"
version.workspace = true
edition.workspace = true
authors.workspace = true
publish = false

[dependencies]
reqwest = { workspace = true, features = ["json"] }
serde_json.workspace = true
serde.workspace = true
anyhow.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
specta = { workspace = true, features = ["serde", "time", "derive"] }
cynic = { workspace = true, features = ["http-reqwest"] }
time = { workspace = true, features = [
    "serde",
    "macros",
    "formatting",
    "parsing",
] }
tracing.workspace = true

[build-dependencies]
cynic-codegen.workspace = true

[dev-dependencies]
insta = "1"
