[package]
name = "popcorntime-tauri"
version.workspace = true
edition = "2018"
authors.workspace = true

[lib]
doctest = false
crate-type = ["lib", "staticlib", "cdylib"]

[[bin]]
name = "popcorntime-tauri"
path = "src/main.rs"
test = false

[build-dependencies]
tauri-build = { workspace = true, features = [] }

[dependencies]
anyhow.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "parking_lot"] }
tracing.workspace = true
tracing-subscriber.workspace = true
futures-util.workspace = true

tracing-appender = "0.2.3"
console-subscriber = "0.4.1"

log = "^0.4"
tauri.workspace = true
tauri-plugin-opener.workspace = true
tauri-plugin-log.workspace = true
tauri-plugin-fs.workspace = true
tauri-plugin-deep-link.workspace = true
tauri-plugin-updater.workspace = true
tauri-plugin-process.workspace = true
tauri-plugin-single-instance = { workspace = true, features = ["deep-link"] }

popcorntime-session.workspace = true
popcorntime-graphql-client.workspace = true
popcorntime-error.workspace = true
popcorntime-settings.workspace = true

specta.workspace = true
tauri-specta = { workspace = true, features = ["derive", "typescript"] }
specta-typescript.workspace = true
cynic.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
popcorntime-tauri-splash.workspace = true
